Switch to Angular-Hero bower package

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ obj/
 .jshintrc
 .ntvs_analysis.dat.tmp
 .ntvs_analysis.dat
+Angular-Hero-Sample.njsproj
+Angular-Hero-Sample.sln
+Angular-Hero-Sample.v12.suo
