--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-loader": "1.3.x",
     "angular-mocks": "~1.3.x",
     "html5-boilerplate": "~4.3.0",
-    "angular-animate": "~1.3.6"
+    "angular-animate": "~1.3.6",
+    "angular-hero": "~0.0.1"
   }
 }
