--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.3.x",
-    "angular-route": "1.3.x",
-    "angular-loader": "1.3.x",
-    "angular-mocks": "~1.3.x",
+    "angular": "1.4.x",
+    "angular-route": "1.4.x",
+    "angular-loader": "1.4.x",
+    "angular-mocks": "1.4.x",
     "html5-boilerplate": "~4.3.0",
-    "angular-animate": "~1.3.6",
-    "angular-hero": "~0.0.1"
+    "angular-animate": "1.4.x",
+    "angular-hero": "~0.0.7"
   }
 }
